# Deuce

./: .gitignore  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements-ci.txt  requirements.txt  run_pipeline.py  scraper_orchestrator.py  scraper_wiki_single.py  tournaments_config.csv
.github/workflows/: update-data.yml
data/config/: tournaments_config.csv
data/interim/: engineered_matches.csv
data/processed/: final_training_data.csv
data/raw/: raw_matches.csv
experiments/: README.md  bwf_rankings.py  candidate_features.py  harness.py  models.py  run_baseline.py  run_capacity.py  run_combined.py  run_elo.py  run_elo_model.py  run_features.py  run_final.py  run_noise.py  run_search.py  tuned_elo.py  validate_rank_proxy.py
experiments/results/: .gitignore  combined.json  elo.json  noise.json  search.json
models/: best_catboost.pkl  best_deepfm.pt  best_lgbm.pkl  best_model.pkl  best_params.json  best_xgb.pkl
site/: app.js  index.html  styles.css
src/: build_config.py  data_checks.py  data_loader.py  dataset.py  feature_engineering.py  model.py  promote.py  scraper_orchestrator.py  scraper_wiki_single.py  simulate.py  simulate_german_open.py  temporal_cv.py  train.py  train_catboost.py  train_ensemble.py  train_lgbm.py  train_tabnet.py  train_xgb.py  tune_hyperparams.py
src/modeling/: dataset.py  model.py  pit_model.py  promote.py  run_temporal_cv.py  temporal_cv.py  train.py  train_catboost.py  train_ensemble.py  train_lgbm.py  train_tabnet.py  train_xgb.py  (+1 more)
tests/: conftest.py  test_export.py  test_names.py  test_pipeline.py  test_serving.py
(+11 files in other folders)
